[gd_scene load_steps=2 format=3 uid="uid://d2kx8y7wnp9qr"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_ui.gd" id="1_dialogue"]

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1_dialogue")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="DialogueBox" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -250.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitContainer" type="VBoxContainer" parent="DialogueBox/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="DialogueBox/MarginContainer/HBoxContainer/PortraitContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SpeakerName" type="Label" parent="DialogueBox/MarginContainer/HBoxContainer/PortraitContainer"]
layout_mode = 2
text = "Speaker"
horizontal_alignment = 1

[node name="ContentContainer" type="VBoxContainer" parent="DialogueBox/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox/MarginContainer/HBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Dialogue text appears here..."
fit_content = true
scroll_active = false

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueBox/MarginContainer/HBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NextButton" type="Button" parent="DialogueBox/MarginContainer/HBoxContainer/ContentContainer"]
layout_mode = 2
text = "â–¶ NEXT"

[connection signal="pressed" from="DialogueBox/MarginContainer/HBoxContainer/ContentContainer/NextButton" to="." method="_on_next_button_pressed"]
